@@ -26,7 +26,6 @@ import org.w3c.dom.Element;
 import org.w3c.dom.Node;
 
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.InputStream;
 import java.net.URL;
 import java.util.Locale;
@@ -90,13 +89,14 @@ public final class FillForm {
         // If we've been given enough arguments, get the input PDF, the input form data file, and the name of the output
         // file. Try to parse the form data file type.
         if (args.length > 2) {
-            final URL inputForm = new URL(args[1]);
+            final URL inputForm = new File(args[1]).toURI().toURL();
 
             final String format = IoUtils.getFileExtensionFromUrl(inputForm);
             if (XML_FORMAT.equalsIgnoreCase(format)
                 || FDF_FORMAT.equalsIgnoreCase(format)
                 || XFDF_FORMAT.equalsIgnoreCase(format)) {
-                fillPdfForm(new URL(args[0]), inputForm, format.toUpperCase(Locale.US), new URL(args[2]));
+                fillPdfForm(new File(args[0]).toURI().toURL(), inputForm, format.toUpperCase(Locale.US),
+                            new File(args[2]).toURI().toURL());
             } else {
                 throw new IllegalArgumentException("Form data format of " + format
                                                    + " is not supported. Supported types: XML, FDF, and XFDF.");
@@ -227,16 +227,13 @@ public final class FillForm {
                     throws Exception {
 
         // Start by getting the form data into an InputStream.
-        InputStream formStream = inputDataUrl.openStream();
-        if (formStream == null) {
-            final File formFile = new File(inputDataUrl.toURI());
-            // For robustness's sake, we'll check that document looks about how we expect it to. If it doesn't, we'll
-            // add some extra information to make it more compatible. These two functions just do Java XML stuff and
-            // don't require any special knowledge of PDF Java Toolkit.
-            if (!hasXfaHeaders(formFile)) {
-                addXfaHeaders(formFile);
-            }
-            formStream = new FileInputStream(formFile);
+        final InputStream formStream = inputDataUrl.openStream();
+
+        // For robustness's sake, we'll check that document looks about how we expect it to. If it doesn't, we'll
+        // add some extra information to make it more compatible. These two functions just do Java XML stuff and
+        // don't require any special knowledge of PDF Java Toolkit.
+        if (!hasXfaHeaders(inputDataUrl)) {
+            addXfaHeaders(inputDataUrl);
         }
 
         // Once we have an XML file with the proper header, use the XFAService to get the data into the PDF.
@@ -254,12 +251,12 @@ public final class FillForm {
      * @return a boolean indicating the presence of XFA header tags.
      * @throws Exception a general exception was thrown
      */
-    private static boolean hasXfaHeaders(final File xfaData) throws Exception {
+    private static boolean hasXfaHeaders(final URL inputDataUrl) throws Exception {
 
         final DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
         final DocumentBuilder builder = factory.newDocumentBuilder();
 
-        final Document xmlDoc = builder.parse(xfaData);
+        final Document xmlDoc = builder.parse(inputDataUrl.openStream());
         final String xmlRootName = xmlDoc.getDocumentElement().getNodeName();
 
         return xmlRootName.equals(XFA_DATA_ROOT_NODE);
@@ -271,12 +268,12 @@ public final class FillForm {
      * @param xfaData - XML data that XFA headers will be added to
      * @throws Exception a general exception was thrown
      */
-    private static void addXfaHeaders(final File xfaData) throws Exception {
+    private static void addXfaHeaders(final URL inputDataUrl) throws Exception {
 
         final DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
         final DocumentBuilder builder = factory.newDocumentBuilder();
 
-        final Document oldDoc = builder.parse(xfaData);
+        final Document oldDoc = builder.parse(inputDataUrl.openStream());
         final Node oldRoot = oldDoc.getDocumentElement();
         final Document newDoc = builder.newDocument();
         final Element newRoot = newDoc.createElementNS(XFA_DATA_NS_URI, XFA_DATA_ROOT_NODE);
@@ -286,7 +283,7 @@ public final class FillForm {
         dataNode.appendChild(newDoc.importNode(oldRoot, true));
 
         final Transformer transformer = TransformerFactory.newInstance().newTransformer();
-        final Result xmlFile = new StreamResult(xfaData);
+        final Result xmlFile = new StreamResult(inputDataUrl.openConnection().getOutputStream());
         final Source newXml = new DOMSource(newDoc);
         transformer.transform(newXml, xmlFile);
 
